--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-
-    <title>Rock Paper Scissors game</title>
-    <script src="script.js"></script>
+    <title>Rock Paper Scissors</title>
+    <meta name="author" content="Harmeet Matharoo">
+    <meta name="description" content="Rock Paper Scissors Game">
+    <link rel="stylesheet" href="style/style.css">
+    <script src="script/script.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
+  <body>
+    <div id = "result"></div>
+    <div id="choices"></div>
+  </body>
 </html>
