game logic complete
game logic complete, can add a message for who won.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <hr class="solid">
 
-    <div id="result"><p>Paper covers rock. You Win!</p></div>
+    <div ><p id="result" >Make a move</p></div>
 
     <!-- <div>
       <h3 id="playerselect"></h3>
@@ -48,7 +48,7 @@
        </div>
     </div>
 
-    <div id="game-count"><p>You have 3 tries left</p>
+    <div id="game-count-div"><p>You have <span id="game-count-span"></span> tries left</p>
     </div>
 
     <script src="script/script.js" charset="utf-8"></script>
