--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
 
     <div ><p id="result" >Make a move</p></div>
 
-    <!-- <div>
-      <h3 id="playerselect"></h3>
-      <h3 id="computerchoice"></h3>
-    </div> -->
-
     <div id="choices">
        <div id="rock">
          <img src="icons/rock.png" alt="rock">
@@ -48,7 +43,7 @@
        </div>
     </div>
 
-    <div id="game-count-div"><p>You have <span id="game-count-span"></span> tries left</p>
+    <div id="game-count-div"><p>You have <span id="game-count-span">5</span> tries left</p>
     </div>
 
     <script src="script/script.js" charset="utf-8"></script>
