--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang "en">
   <head>
     <meta charset="utf-8">
     <title>Rock Paper Scissors game</title>
@@ -46,7 +46,7 @@
     <div id="game-count-div"><p>You have <span id="game-count-span">5</span> tries left</p>
     </div>
 
-    <script src="script/script.js" charset="utf-8"></script>
+    <script src="script/script.js"></script>
   </body>
  
 </html>
